[gd_scene load_steps=12 format=3 uid="uid://db7nq6cx0kjmc"]

[ext_resource type="PackedScene" uid="uid://cmc7bjuwnapv" path="res://Game/game_menu_bar.tscn" id="1_8x2m7"]
[ext_resource type="Script" path="res://Game/game_wardrobe_scene.gd" id="1_xadkr"]
[ext_resource type="Texture2D" uid="uid://c2xsqitgscjci" path="res://Assets/Backgrounds/Pedestal.png" id="3_kjnuj"]
[ext_resource type="PackedScene" uid="uid://coxax4yxcvi2g" path="res://UI/scene_changer.tscn" id="3_l3bex"]
[ext_resource type="PackedScene" uid="uid://cveodrtbufiop" path="res://Game/duck_base.tscn" id="3_l61xw"]
[ext_resource type="Texture2D" uid="uid://dsfshkuh71hex" path="res://Assets/Shadow.png" id="4_g0dfq"]
[ext_resource type="Script" path="res://Game/Wardrobe_Menu.gd" id="4_tbna3"]

[sub_resource type="ButtonGroup" id="ButtonGroup_wun3g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t5wsn"]

[sub_resource type="Theme" id="Theme_xjomx"]
ItemList/styles/panel = SubResource("StyleBoxFlat_t5wsn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4sx2w"]
bg_color = Color(1, 1, 1, 1)

[node name="Game_Wardrobe_Scene" type="Node2D"]
script = ExtResource("1_xadkr")

[node name="Top_Layer" type="CanvasLayer" parent="."]
layer = -1

[node name="Game_Menu_Bar" parent="Top_Layer" instance=ExtResource("1_8x2m7")]

[node name="Scene_Changer" parent="Top_Layer" instance=ExtResource("3_l3bex")]

[node name="TextureRect" type="TextureRect" parent="Top_Layer"]
offset_top = 600.0
offset_right = 1080.0
offset_bottom = 1680.0
texture = ExtResource("3_kjnuj")

[node name="Wardrobe_Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 1420.0
offset_right = 1080.0
offset_bottom = 1820.0
script = ExtResource("4_tbna3")

[node name="Tab_Organiser" type="VBoxContainer" parent="Wardrobe_Menu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -400.0
offset_right = 80.0
grow_vertical = 0

[node name="Headwear_Tab" type="Button" parent="Wardrobe_Menu/Tab_Organiser"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_wun3g")
text = "Head"

[node name="Eyewear_Tab" type="Button" parent="Wardrobe_Menu/Tab_Organiser"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_wun3g")
text = "Eye"

[node name="Neckwear_Tab" type="Button" parent="Wardrobe_Menu/Tab_Organiser"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_wun3g")
text = "Neck"

[node name="FullBodywear_Tab" type="Button" parent="Wardrobe_Menu/Tab_Organiser"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_wun3g")
text = "Full"

[node name="Wingwear_Tab" type="Button" parent="Wardrobe_Menu/Tab_Organiser"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_wun3g")
text = "Wing
"

[node name="Footwear_Tab" type="Button" parent="Wardrobe_Menu/Tab_Organiser"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_wun3g")
text = "Foot"

[node name="Item_Display" type="ItemList" parent="Wardrobe_Menu"]
layout_mode = 0
offset_left = 79.0
offset_right = 1079.0
offset_bottom = 400.0
theme = SubResource("Theme_xjomx")
theme_override_styles/panel = SubResource("StyleBoxFlat_4sx2w")
allow_reselect = true
max_columns = 5
fixed_icon_size = Vector2i(200, 200)

[node name="Clear_Accessory_Button" type="Button" parent="Wardrobe_Menu/Item_Display"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
text = "Clear"

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.447059)
position = Vector2(570, 891)
scale = Vector2(0.429, 0.429)
texture = ExtResource("4_g0dfq")

[node name="Duck_Base" parent="." instance=ExtResource("3_l61xw")]
position = Vector2(527, 643)
scale = Vector2(3, 3)

[connection signal="pressed" from="Wardrobe_Menu/Tab_Organiser/Headwear_Tab" to="Wardrobe_Menu" method="_on_headwear_tab_pressed"]
[connection signal="pressed" from="Wardrobe_Menu/Tab_Organiser/Eyewear_Tab" to="Wardrobe_Menu" method="_on_eyewear_tab_pressed"]
[connection signal="pressed" from="Wardrobe_Menu/Tab_Organiser/Neckwear_Tab" to="Wardrobe_Menu" method="_on_neckwear_tab_pressed"]
[connection signal="pressed" from="Wardrobe_Menu/Tab_Organiser/FullBodywear_Tab" to="Wardrobe_Menu" method="_on_full_bodywear_tab_pressed"]
[connection signal="pressed" from="Wardrobe_Menu/Tab_Organiser/Wingwear_Tab" to="Wardrobe_Menu" method="_on_wingwear_tab_pressed"]
[connection signal="pressed" from="Wardrobe_Menu/Tab_Organiser/Footwear_Tab" to="Wardrobe_Menu" method="_on_footwear_tab_pressed"]
[connection signal="item_selected" from="Wardrobe_Menu/Item_Display" to="." method="_on_item_display_item_selected"]
[connection signal="pressed" from="Wardrobe_Menu/Item_Display/Clear_Accessory_Button" to="." method="_on_clear_accessory_button_pressed"]
